syntax = "proto3";

package placement_driver;

service PlacementDriver {
    rpc GetTimestamp (TsoRequest) returns (TsoReply);
    rpc GetDataLocation (DataLocRequest) returns (DataLocReply);
}

message TsoRequest { }

message TsoReply {
    uint64 timestamp = 1;
}

message DataLocRequest { }

message DataLocReply { }